# pr-reviewer-ai

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  main.py  main_debug.py  pyproject.toml  requirements.txt  sync_internal_external.sh
core/: bot.py  bot_hf.py  bot_mistral.py  bot_openai.py  commenter.py  consts.py  input_reader.py  tokenizer.py  utils.py
core/bots/: bot.py  bot_hf.py  bot_mistral.py  bot_openai.py
core/github/: __init__.py  context.py  github.py
core/review/: code.py  comment.py
core/schemas/: comment_chains.py  comment_reply.py  common.py  files.py  inputs.py  limits.py  options.py  patch.py  pr_common.py  prompts.py  review.py
core/templates/: prompts.py  tags.py
test/: github_event_path_mock_pull_request.json  github_event_path_mock_pull_request_review_comment.json  pull_request.env  pull_request_review_comment.env
